# cloud-sec-env

./: .gitignore  DECISIONS.md  Environment_Spec.md  Hackathon-Problems.txt  Plan.md  Questions.txt  README.md  SCHEMAS.md  Tasks.md  blog_post.md
cloud_sec_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
cloud_sec_env/agent/: harness.py  run.py  tool_specs.py
cloud_sec_env/agent/adapters/: anthropic_adapter.py  base.py  qwen_adapter.py
cloud_sec_env/data/task_01_oidc_rotation/: alert.json  ground_truth.yaml  logs.jsonl  metrics.jsonl  slack.yaml  tickets.yaml  traces.json
cloud_sec_env/data/task_01_oidc_rotation/kb/: kb-09_auth-outage-retro-2024.md  kb-17_terraform-best-practices.md  kb-24_oidc-federation-overview.md  kb-38_auth-svc-5xx-runbook.md  kb-42_oidc-key-rotation-runbook.md  kb-55_incident-response-playbook.md
cloud_sec_env/server/: Dockerfile  __init__.py  app.py  cloud_sec_env_environment.py  data_loader.py  llm_judge.py  reward.py  tools.py
cloud_sec_env/server/static/: app.js  index.html  styles.css
colab/: cloud_sec_env_eval.ipynb  cloud_sec_env_eval_sft.ipynb  cloud_sec_env_grpo.ipynb  cloud_sec_env_sft.ipynb
demo/: STORY.md  ablation.md  blog_post_draft.md  video_script.md
scripts/: ablation_rubric.py  build_colab_notebook.py  build_eval_notebook.py  build_eval_sft_notebook.py  build_grpo_notebook.py  build_sft_dataset.py  clean_and_push_adapter.py  eval_against_space.py  eval_sft_via_endpoint.py  make_before_after_chart.py  make_rubric_breakdown_chart.py  make_step_reward_curve.py  push_space_full.py  (+6 more)
(+117 files in other folders)
