# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-cloud_sec_env"
version = "0.1.0"
description = "Cloud Sec Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    "pyyaml>=6.0",
    # Optional: if ANTHROPIC_API_KEY is set, the LLM-judge rubric
    # auxiliary scoring activates. The env runs fine without this
    # dep (keyword rubric is primary).
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m cloud_sec_env.server.app
server = "cloud_sec_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["cloud_sec_env", "cloud_sec_env.server"]
package-dir = { "cloud_sec_env" = ".", "cloud_sec_env.server" = "server" }